--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "handlebars": "^4.7.7",
     "on-headers": "1.0.2",
     "pidusage": "2.0.18",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.7.2"
   },
   "optionalDependencies": {
     "event-loop-stats": "1.2.0"
@@ -77,7 +77,8 @@
     "test-ci": "mocha --recursive",
     "test": "mocha --recursive --watch",
     "example": "npm i && npm i --prefix examples && npm start --prefix examples",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "chai": "4.3.6",
